force-app/main/default/objects/Course__c/fields/Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Program_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>