force-app/main/default/objects/Course__c/fields/Course_Format__c.field-meta.xml
<CustomField>
    <fullName>Course_Format__c</fullName>
    <label>Course Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Independent Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>