force-app/main/default/objects/Course__c/fields/Course_Level__c.field-meta.xml
<CustomField>
    <fullName>Course_Level__c</fullName>
    <label>Course Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 (Freshman)</fullName>
            </value>
            <value>
                <fullName>200 (Sophomore)</fullName>
            </value>
            <value>
                <fullName>300 (Junior)</fullName>
            </value>
            <value>
                <fullName>400 (Senior)</fullName>
            </value>
            <value>
                <fullName>500 (Graduate)</fullName>
            </value>
            <value>
                <fullName>600 (Advanced Graduate)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>