force-app/main/default/objects/Course__c/fields/Max_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Max_Enrollment__c</fullName>
    <label>Max Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>