force-app/main/default/objects/Course__c/fields/Semester_Offered__c.field-meta.xml
<CustomField>
    <fullName>Semester_Offered__c</fullName>
    <label>Semester Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer I</fullName>
            </value>
            <value>
                <fullName>Summer II</fullName>
            </value>
            <value>
                <fullName>Winter Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>