force-app/main/default/objects/Course__c/validationRules/Course_Credits_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Credits_Validation</fullName>
    <active>true</active>
    <description>Ensures course credits are positive</description>
    <errorConditionFormula>Credit_Hours__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Credit_Hours__c</errorDisplayField>
    <errorMessage>Course credits must be greater than 0</errorMessage>
</ValidationRule>