force-app/main/default/objects/Course__c/validationRules/Course_Max_Enrollment_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Max_Enrollment_Validation</fullName>
    <active>true</active>
    <description>Ensures maximum enrollment is a positive number</description>
    <errorConditionFormula>Max_Enrollment__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Max_Enrollment__c</errorDisplayField>
    <errorMessage>Maximum enrollment must be greater than 0</errorMessage>
</ValidationRule>